# alignomatic

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Singularity.def
.github/workflows/: dev-tests.yml  release.yml
data/: test.bam
src/: aligner.rs  bam_io.rs  checkpoint.rs  cli.rs  main.rs  mapping_status.rs  minimap_version.rs  output.rs  read_pair_io.rs  read_types.rs  utils.rs
src/bam_io/: tests.rs
tests/: integration.rs
