[package]
name = "alignomatic"
version = "0.5.2"
edition = "2021"

[dependencies]
bio = ">=2.0.0"
num_cpus = "1.16.0"
rust-htslib = { version = ">=0.47.0", default-features = false }
bwa = { git = "https://github.com/kgori/rust-bwa.git", tag = "v0.1.5" }
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.89"
flate2 = "1.0.34"
log = "0.4.22"
env_logger = "0.11.5"
libc = "0.2.159"
niffler = "2.6.0"
bgzf = "0.2.0"
blake3 = "1.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.24.0"
itertools = "0.14.0"

# Tips on making bindgen work:
# Use the pacbio conda environment and set environment variables
# LIBCLANG_PATH="/nfs/dog_n_devil/kevin/micromamba/envs/pacbio/lib"
# BINDGEN_EXTRA_CLANG_ARGS="-I/nfs/dog_n_devil/kevin/micromamba/envs/pacbio/include"
# 'pacbio' has clang and libclang installed

[profile.release-with-debug]
inherits = "release"
debug = true
